Fix git aliases